# execlib

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: conf.py  index.md
docs/reference/documentation/: sphinx.md
execlib/: __init__.py  router.py  server.py
execlog/: __init__.py  event.py  handler.py  listener.py  router.py  server.py
execlog/listeners/: __init__.py  path.py
execlog/routers/: path.py
execlog/syncers/: router.py
execlog/util/: __init__.py  generic.py  path.py
tests/: test_router.py  test_server.py
