[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "execlog"
version = "0.4.1"
authors = [
  { name="Sam Griesemer", email="samgriesemer@gmail.com" },
]
description = "Lightweight multi-threaded job framework"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tqdm"
]

[tool.setuptools.packages.find]
include = ["execlog*"] # pattern to match package names 

