[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "execlib"
version = "0.4.5"
description = "Lightweight multi-threaded job framework"
requires-python = ">=3.12"
authors = [
  { name="Sam Griesemer", email="git@olog.io" },
]
readme = "README.md"
license = "MIT"
keywords = ["concurrent", "async", "inotify"]
classifiers = [
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
]
dependencies = [
    "tqdm",
    "wcmatch",
    "uvicorn",
    "fastapi",
    "colorama",
    "starlette",
    "inotify_simple",
    "co3",
]

[project.scripts]
symconf = "execlib.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "websockets",
]
doc = [
    "sphinx",
    "sphinx-togglebutton",
    "sphinx-autodoc-typehints",
    "furo",
    "myst-parser",
]

[project.urls]
Homepage = "https://doc.olog.io/execlib"
Documentation = "https://doc.olog.io/execlib"
Repository = "https://git.olog.io/olog/execlib"
Issues = "https://git.olog.io/olog/execlib/issues"

[dependency-groups]
dev = [
    "ipykernel",
]

[tool.setuptools.packages.find]
include = ["execlib*"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["ANN", "E", "F", "UP", "B", "SIM", "I", "C4", "PERF"]

[tool.ruff.lint.isort]
length-sort = true
order-by-type = false
force-sort-within-sections = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.uv.sources]
co3 = { path = "../co3", editable = true }
